--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+
+body{
+    font-family: 'Roboto', sans-serif;
+}
+
+
 .bg-primary{
     background-color: #31A8FF !important;
 }
