--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,7 +34,7 @@ body{
 }
 
 .pr-4{
-    padding-top: 15px;
+    padding-top: 8px;
     padding-right: 24.5px !important;
 }
 
@@ -48,4 +48,14 @@ body{
 
 .w-50{
     width: 132px !important;
+}
+
+.fs-6{
+    font-size: 14px !important;
+}
+
+.social{
+    margin-top: 20px;
+    list-style: none;
+    padding-left: 0%;
 }
